fixed gap between sidebar and container, also put the header navbar in the bottom before the footer when hitting 1024 screen width

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -60,3 +60,30 @@
 .active-nav-item {
    color: #8EA0B2;
 }
+
+@media only screen and (max-width: 1024px) {
+   .header {
+      top: 80vh;
+      display: flex;
+      justify-content: center;
+      width: 100vw;
+      height: 10vh;
+
+      nav {
+         width: 100%;
+         height: 100%;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+
+         div {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+         }
+      }
+   }
+}
