--- a/src/components/layoutComponent.module.scss
+++ b/src/components/layoutComponent.module.scss
@@ -14,3 +14,10 @@
    display: grid;
    grid-template-columns: 0.6fr 1fr
 }
+
+@media only screen and (max-width: 1024px) {
+   .container {
+      width: 100vw;
+      margin: 0;
+   }
+}
