--- a/src/stylesheets/layout.scss
+++ b/src/stylesheets/layout.scss
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 22px;
+  background: #0F1623;
 }
 article,
 aside,
